ci: add Renovate to required status checks

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -18,7 +18,7 @@ branches:
     protection:
       required_status_checks:
         strict: false
-        contexts: [Build, Test]
+        contexts: [Build, Renovate / Renovate, Test]
       enforce_admins: true
       required_pull_request_reviews: null
       restrictions: null
