--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,6 +1,8 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "local>marcusrbrown/renovate-config"
-  ]
+  $schema: 'https://docs.renovatebot.com/renovate-schema.json',
+  extends: ['local>marcusrbrown/renovate-config'],
+  postUpgradeTasks: {
+    commands: ['pnpm install', 'pnpm fix'],
+    executionMode: 'branch',
+  },
 }
