--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,8 +1,10 @@
 {
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
-  extends: ['local>marcusrbrown/renovate-config'],
+  extends: ['github>marcusrbrown/renovate-config#4.1.1'],
   postUpgradeTasks: {
     commands: ['pnpm install', 'pnpm fix'],
     executionMode: 'branch',
   },
+  prCreation: 'immediate',
+  rebaseWhen: 'behind-base-branch',
 }
