ci(renovate): manually update @marcusrbrown/renovate-config to 4.2.0

--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -8,7 +8,7 @@ on:
   pull_request:
     types: [edited]
   push:
-    branches-ignore: [main, renovate/configure]
+    branches-ignore: [main]
   workflow_dispatch:
     inputs:
       log-level:
@@ -24,7 +24,7 @@ on:
   workflow_run:
     branches: [main]
     types: [completed]
-    workflows: [Main]
+    workflows: [CI]
 
 permissions:
   contents: read
