--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "test:coverage": "vitest --coverage",
     "lint": "eslint .",
     "fix": "eslint . --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "prepare": "simple-git-hooks",
+    "lint-staged": "lint-staged"
   },
   "packageManager": "pnpm@10.13.1",
   "devDependencies": {
@@ -38,11 +40,21 @@
     "eslint-plugin-prettier": "^5.5.3",
     "jiti": "^2.4.2",
     "jsdom": "^26.1.0",
+    "lint-staged": "16.1.2",
     "prettier": "^3.0.0",
+    "simple-git-hooks": "2.13.1",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.37.0",
     "vite": "^7.0.0",
     "vitest": "^3.2.4"
   },
-  "prettier": "@bfra.me/prettier-config"
+  "prettier": "@bfra.me/prettier-config",
+  "simple-git-hooks": {
+    "pre-commit": "pnpm exec lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,js,jsx,tsx,css,md,json,yaml,yml}": [
+      "eslint --fix"
+    ]
+  }
 }
