--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,12 +1,17 @@
+autoInstallPeers: false
+
+dedupePeerDependents: true
+
 onlyBuiltDependencies:
   - esbuild
+  - simple-git-hooks
   - unrs-resolver
 
 overrides:
   jiti: <2.2.0
 
 shamefullyHoist: true
-autoInstallPeers: false
-dedupePeerDependents: true
+
 shellEmulator: true
+
 strictPeerDependencies: true
