--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "eslint-plugin-prettier": "^5.5.3",
     "jiti": "^2.4.2",
     "jsdom": "^26.1.0",
-    "lint-staged": "16.1.2",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.0.0",
-    "simple-git-hooks": "2.13.1",
+    "simple-git-hooks": "^2.13.1",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.37.0",
     "vite": "^7.0.0",
