feat: add comprehensive unit tests for generic utility types
- Implement unit tests for DeepPartial, DeepRequired, and DeepReadonly utilities
- Add tests for enhanced Pick/Omit utilities: PickOptional and PickRequired
- Create tests for factory function utilities: FactoryReturnType, FactoryParameters, and FactoryUpdate
- Introduce tests for callback and event utilities: CallbackPayload, CallbackCollection, and CallbackKeys
- Validate conditional and utility types: IsNever, IsFunction, FunctionProperties, and NonFunctionProperties
- Ensure integration tests cover VBS factory pattern and callback systems

chore: update TypeScript configuration for strict type checking

- Added strict generic type checking options to improve type safety
- Enabled strict function types and strict bind/call/apply checks
- Updated configuration to ensure no implicit returns and exact optional property types

Resolves TASK-004 and TASK-005 on #78.
Closes #78.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,15 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Strict Generic Type Checking */
+    "noStrictGenericChecks": false,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": true
   },
   "include": ["**/*"]
 }
