--- a/package.json
+++ b/package.json
@@ -39,24 +39,25 @@
   },
   "prettier": "@bfra.me/prettier-config",
   "devDependencies": {
-    "@bfra.me/eslint-config": "^0.25.0",
+    "@bfra.me/eslint-config": "^0.25.1",
     "@bfra.me/prettier-config": "^0.16.0",
     "@bfra.me/tsconfig": "^0.11.0",
-    "@types/node": "^22.0.0",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^24.1.0",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "eslint": "^9.31.0",
+    "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-json-schema-validator": "^5.4.1",
     "eslint-plugin-prettier": "^5.5.3",
-    "jiti": "^2.4.2",
+    "jiti": "^2.5.1",
     "jsdom": "^26.1.0",
-    "lint-staged": "^16.1.2",
-    "prettier": "^3.0.0",
+    "lint-staged": "^16.1.4",
+    "prettier": "^3.6.2",
     "simple-git-hooks": "^2.13.1",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.37.0",
-    "vite": "^7.0.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.6",
     "vitest": "^3.2.4"
   },
   "packageManager": "pnpm@10.14.0"
