docs: Add llms.txt for project overview and documentation links
- Introduced a new documentation file for VBS (View By Stardate)
- Provides an overview of the project, architecture, and core implementation
- Includes links to main README, viewing guide, and other relevant documentation

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prepare": "simple-git-hooks",
     "preview": "vite preview",
     "test": "vitest run",
-    "test:coverage": "vitest --coverage",
+    "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "type-check": "tsc --noEmit"
   },
