--- a/package.json
+++ b/package.json
@@ -38,10 +38,14 @@
     ]
   },
   "prettier": "@bfra.me/prettier-config",
+  "dependencies": {
+    "d3": "^7.9.0"
+  },
   "devDependencies": {
     "@bfra.me/eslint-config": "^0.25.1",
     "@bfra.me/prettier-config": "^0.16.0",
     "@bfra.me/tsconfig": "^0.11.0",
+    "@types/d3": "^7.4.3",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^24.1.0",
     "@vitest/coverage-v8": "^3.2.4",
