feat(service-worker): add conflict resolution for metadata updates
- Added conflict resolution mechanism for concurrent metadata updates.
- Implemented operation locks and pending operation queues for episodes.
- Updated metadata processing to handle conflicts and store them for review.
- Enhanced progress tracking for bulk metadata operations with user notifications.

Resolves TASK-027 on #148.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "scripts": {
     "build": "tsc && vite build",
     "dev": "vite",
-    "fix": "eslint . --fix",
-    "lint": "eslint .",
+    "fix": "eslint --fix",
+    "lint": "eslint",
     "lint-staged": "lint-staged",
     "prepare": "simple-git-hooks",
     "preview": "vite preview",
