fix: upgrade to `@bfra.me/eslint-config v0.32.0` (#208)
* chore(dev): update bfra-me/works monorepo

* chore: remove sorting of package.json in lint-staged

- Remove the sorting of package.json from lint-staged configuration

* chore(eslint): disable type-aware linting

* chore: add implementation plan for TypeScript ESLint error remediation

- Introduce a systematic approach to eliminate TypeScript ESLint errors
- Document requirements, constraints, and implementation phases
- Outline tasks for high-priority quick wins and complex API typing remediation
- Establish validation steps and risk management strategies

* chore: address ESLint and TypeScript errors

* refactor: streamline button event listener setup

- Introduce `getDataAttribute` function to extract data attributes.
- Create `addButtonListeners` function to handle click and keyboard events.
- Replace repetitive event listener code with `addButtonListeners` for episode toggle, details, spoiler, and load more buttons.

* chore: remove extraneous linter dependencies

---------

Co-authored-by: mrbro-bot[bot] <137683033+mrbro-bot[bot]@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,33 +2,32 @@
   "extends": "@bfra.me/tsconfig",
   "compilerOptions": {
     "target": "ES2022",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "moduleDetection": "force",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "moduleDetection": "force",
-    "noEmit": true,
 
     /* Linting */
     "strict": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "exactOptionalPropertyTypes": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "noEmit": true,
+    "verbatimModuleSyntax": true,
     "erasableSyntaxOnly": true,
-    "noFallthroughCasesInSwitch": true,
+    "skipLibCheck": true,
     "noUncheckedSideEffectImports": true,
 
     /* Strict Generic Type Checking */
-    "noStrictGenericChecks": false,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "exactOptionalPropertyTypes": true,
-    "noImplicitReturns": true,
-    "noPropertyAccessFromIndexSignature": true
+    "noStrictGenericChecks": false
   },
   "include": ["**/*"]
 }
